maze.wallfindfollow.WallFindFollowMaze.scala.error
Compilation error:
WallFindFollowMaze:4: error: not found: value random
    i=random(3)
      ^